--- a/precompiled/css/index.scss
+++ b/precompiled/css/index.scss
@@ -45,7 +45,6 @@ body{
 			}
 			&.footer{
 				background:#333;
-				height:500px;
 				a{
 					color:white;
 				}
@@ -110,7 +109,7 @@ body{
 				display:flex;
 				flex-direction:row;
 				min-width:100%;
-				padding:70px 100px;
+				padding:70px 0px;
 				justify-content:center;
 				align-items:center;
 				min-height:600px;
